# Inscribe

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTE.md  RELEASE_NOTES.md  mntpack.json
.github/workflows/: release.yml
crates/inscribe-abi/: Cargo.toml
crates/inscribe-abi/src/: abi_header.rs  calling_conv.rs  layout.rs  lib.rs  mlib.rs  stability.rs  versioning.rs
crates/inscribe-ast/: Cargo.toml
crates/inscribe-ast/src/: lib.rs  nodes.rs  span.rs  visit.rs
crates/inscribe-cli/: Cargo.toml
crates/inscribe-cli/src/: main.rs  session.rs
crates/inscribe-cli/src/commands/: build.rs  check.rs  emit.rs  mod.rs  run.rs
crates/inscribe-codegen/: Cargo.toml
crates/inscribe-codegen/src/: lib.rs  mlib.rs  native.rs  targets.rs
crates/inscribe-codegen/src/llvm/: emit.rs  intrinsics.rs  mod.rs
crates/inscribe-codegen/src/wasm/: mod.rs
crates/inscribe-comptime/: Cargo.toml
crates/inscribe-comptime/src/: boundary.rs  comptime_alloc.rs  interpreter.rs  lib.rs  reflect.rs  runtime.rs
crates/inscribe-debug/: Cargo.toml
crates/inscribe-debug/src/: dwarf.rs  lib.rs  source_map.rs  var_tracking.rs
crates/inscribe-ffi/: Cargo.toml
crates/inscribe-ffi/src/: extern_block.rs  lib.rs  ownership_bridge.rs  sandbox_ffi.rs  type_map.rs
crates/inscribe-hir/: Cargo.toml
crates/inscribe-hir/src/: lib.rs  lower.rs  nodes.rs  pretty.rs
crates/inscribe-incremental/: Cargo.toml
crates/inscribe-incremental/src/: cache.rs  dep_graph.rs  fingerprint.rs  lib.rs  query.rs
crates/inscribe-lexer/: Cargo.toml
crates/inscribe-lexer/src/: cursor.rs  lib.rs  literals.rs  token.rs
crates/inscribe-mir/: Cargo.toml
crates/inscribe-mir/src/: borrow_check.rs  const_eval.rs  determinism.rs  lib.rs  lower.rs  nodes.rs  optimize.rs
crates/inscribe-parser/: Cargo.toml
crates/inscribe-parser/src/: expr.rs  item.rs  lib.rs  parser.rs  recovery.rs  stmt.rs
crates/inscribe-resolve/: Cargo.toml
crates/inscribe-resolve/src/: cycle_detect.rs  import.rs  lib.rs  loader.rs  module_tree.rs  resolver.rs  scope.rs
crates/inscribe-sandbox/: Cargo.toml
crates/inscribe-sandbox/src/: capability.rs  lib.rs  policy.rs  runtime.rs  wasm_backend.rs
crates/inscribe-session/: Cargo.toml
crates/inscribe-session/src/: diagnostics.rs  lib.rs  session.rs
crates/inscribe-typeck/: Cargo.toml
crates/inscribe-typeck/src/: check.rs  errors.rs  infer.rs  lib.rs  ownership.rs  unify.rs
examples/: basic.hir  basic.mir  basic.mtl  calculator.hir  calculator.mir  calculator.mtl  with_includes.hir  with_includes.mir  with_includes.mtl
examples/json_parser/: main.asm  main.hir  main.mir  main.mtl
examples/json_parser/shared/: json.mtl
examples/shared/: bonus_math.mtl
stdlib/: README.md
stdlib/core/: bool.mlib  bool.mtl  math.mlib  math.mtl  result.mlib  result.mtl  string.mlib  string.mtl
stdlib/http/: client.mlib  client.mtl
stdlib/io/: console.mlib  console.mtl
stdlib/runtime/: http.mlib  http.mtl  io.mlib  io.mtl  process.mlib  process.mtl  string.mlib  string.mtl  time.mlib  time.mtl
tests/: booltest.mtl
tests/compile_fail/: bad_call_arity.mtl  type_mismatch.mtl  unknown_field.mtl
tests/compile_pass/: arith_main.mtl  control_flow.mtl  import_io_console.mtl  import_local.mtl  import_stdlib.mtl  result_match.mtl  struct_method.mtl
tests/compile_pass/shared/: math_helpers.mtl
tools/vscode-mentalogue/: README.md  extension.js  package.json
