[package]
name = "inscribe-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
inscribe-abi = { path = "../inscribe-abi" }
inscribe-ast = { path = "../inscribe-ast" }
inscribe-codegen = { path = "../inscribe-codegen" }
inscribe-debug = { path = "../inscribe-debug" }
inscribe-hir = { path = "../inscribe-hir" }
inscribe-incremental = { path = "../inscribe-incremental" }
inscribe-lexer = { path = "../inscribe-lexer" }
inscribe-mir = { path = "../inscribe-mir" }
inscribe-parser = { path = "../inscribe-parser" }
inscribe-resolve = { path = "../inscribe-resolve" }
inscribe-session = { path = "../inscribe-session" }
inscribe-typeck = { path = "../inscribe-typeck" }
