[package]
name = "inscribe-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
inscribe-abi = { path = "../inscribe-abi" }
inscribe-mir = { path = "../inscribe-mir" }
inscribe-sandbox = { path = "../inscribe-sandbox" }
inscribe-typeck = { path = "../inscribe-typeck" }

[dev-dependencies]
inscribe-hir = { path = "../inscribe-hir" }
inscribe-lexer = { path = "../inscribe-lexer" }
inscribe-parser = { path = "../inscribe-parser" }
inscribe-resolve = { path = "../inscribe-resolve" }
inscribe-typeck = { path = "../inscribe-typeck" }
