[package]
name = "inscribe-comptime"
version = "0.1.0"
edition = "2021"

[dependencies]
inscribe-mir = { path = "../inscribe-mir" }
inscribe-typeck = { path = "../inscribe-typeck" }

[dev-dependencies]
inscribe-hir = { path = "../inscribe-hir" }
inscribe-lexer = { path = "../inscribe-lexer" }
inscribe-parser = { path = "../inscribe-parser" }
inscribe-resolve = { path = "../inscribe-resolve" }
