[package]
name = "inscribe-debug"
version = "0.1.0"
edition = "2021"

[dependencies]
inscribe-ast = { path = "../inscribe-ast" }
inscribe-hir = { path = "../inscribe-hir" }
inscribe-mir = { path = "../inscribe-mir" }

[dev-dependencies]
inscribe-resolve = { path = "../inscribe-resolve" }
inscribe-typeck = { path = "../inscribe-typeck" }
