[package]
name = "inscribe-hir"
version = "0.1.0"
edition = "2021"

[dependencies]
inscribe-ast = { path = "../inscribe-ast" }
inscribe-resolve = { path = "../inscribe-resolve" }
inscribe-typeck = { path = "../inscribe-typeck" }

[dev-dependencies]
inscribe-lexer = { path = "../inscribe-lexer" }
inscribe-parser = { path = "../inscribe-parser" }
