[package]
name = "inscribe-hir"
version = "0.1.0"
edition = "2021"

[dependencies]
inscribe-ast = { path = "../inscribe-ast" }
inscribe-lexer = { path = "../inscribe-lexer" }
inscribe-parser = { path = "../inscribe-parser" }
inscribe-resolve = { path = "../inscribe-resolve" }
inscribe-session = { path = "../inscribe-session" }
inscribe-typeck = { path = "../inscribe-typeck" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
