[package]
name = "inscribe-typeck"
version = "0.1.0"
edition = "2021"

[dependencies]
inscribe-ast = { path = "../inscribe-ast" }
inscribe-resolve = { path = "../inscribe-resolve" }
inscribe-session = { path = "../inscribe-session" }

[dev-dependencies]
inscribe-lexer = { path = "../inscribe-lexer" }
inscribe-parser = { path = "../inscribe-parser" }
